# xubb-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LICENSE  README.md  SECURITY.md  SPEC_V2.md  SPEC_V2_1_HARDENING.md  __init__.py  conftest.py  prompt_engineering_guide.md  pyproject.toml  technical_spec_agents.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: contract-gate.yml
core/: agent.py  blackboard.py  callbacks.py  conditions.py  engine.py  llm.py  models.py
docs/: CONTRACTS.yaml  EXECUTIVE_SUMMARY.md  PLAYBOOK.md  PROCESS.md  PUBLIC_RELEASE_READINESS.md  README.md  SPEC_LLM_MODERN_MODELS.md  SPEC_V2.md  SPEC_V2_1_1_BUGFIX.md  SPEC_V2_1_HARDENING.md  SPEC_V2_2_HARDENING.md  prompt_engineering_guide.md  technical_spec_agents.md
docs/archive/: README.md  SPEC_V2.md
tests/: __init__.py  conftest.py  quick_test.py  test_blackboard.py  test_check_contracts.py  test_compatibility.py  test_conditions.py  test_dynamic_agent.py  test_engine.py  test_llm.py  test_packaging.py  test_readme_quickstart.py  test_reasoning_validation.py  test_registry_mutators.py  test_schemas.py  test_tracing.py
tests/qa_probes/: test_probe_f1_facts_priority.py
tools/: check_contracts.py  debugger.html
utils/: tracing.py
xubb_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
