[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xubb-agents"
version = "0.1.0"
description = "A lightweight, event-driven framework for real-time conversational AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Xubb Team"}
]
keywords = ["ai", "agents", "conversation", "llm", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/xubb-agents"
Documentation = "https://github.com/your-org/xubb-agents#readme"
Repository = "https://github.com/your-org/xubb-agents"

[tool.setuptools]
packages = ["xubb_agents"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

