[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xubb-agents"
version = "2.4.0"
description = "A lightweight, event-driven framework for real-time conversational AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "genriq", email = "genriq@users.noreply.github.com"}
]
keywords = ["ai", "agents", "conversation", "llm", "real-time", "copilot", "blackboard", "openai", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    # Prompt templates render through Jinja2's SandboxedEnvironment. The sandbox is
    # only as strong as the installed patch level: <3.1.5 has sandbox-escape CVEs
    # (CVE-2024-56201, CVE-2024-56326) and <3.1.6 has the |attr bypass (CVE-2025-27516).
    # Do not lower this floor.
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pyyaml>=6.0",          # tools/check_contracts.py parses docs/CONTRACTS.yaml
]

[project.urls]
Homepage = "https://github.com/genriq/xubb-agents"
Documentation = "https://github.com/genriq/xubb-agents#readme"
Repository = "https://github.com/genriq/xubb-agents"
Changelog = "https://github.com/genriq/xubb-agents/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/genriq/xubb-agents/issues"
Security = "https://github.com/genriq/xubb-agents/blob/main/SECURITY.md"

[tool.setuptools]
packages = ["xubb_agents", "xubb_agents.core", "xubb_agents.library", "xubb_agents.utils"]

[tool.setuptools.package-dir]
xubb_agents = "."

[tool.setuptools.package-data]
# The schemas MUST ship: DynamicAgent loads library/schemas/*.json at runtime and
# silently degrades to an emergency fallback schema when they're missing. The old
# '"*" = ["*.json"]' glob was non-recursive (schemas/ is not a package), so built
# wheels shipped WITHOUT them — caught by the public-release audit and locked by
# tests/test_packaging.py.
"xubb_agents.library" = ["schemas/*.json"]
"*" = ["*.md", "*.txt", "*.json", "*.html"]


[tool.pytest.ini_options]
# Strict asyncio: every async test must be explicitly marked @pytest.mark.asyncio.
asyncio_mode = "strict"
testpaths = ["tests"]
# Put the parent of the repo root on sys.path so ``import xubb_agents`` resolves
# without ``pip install -e .``. This works when the checkout dir is named
# ``xubb_agents``; the repo-root conftest.py handles the dir-renamed case too.
pythonpath = [".."]
markers = [
    "asyncio: marks a test as an asyncio coroutine (handled by pytest-asyncio).",
    "invariant: marks a test as guarding a documented contract/invariant (G2 gate).",
]

